--- a/src/app/modules/employee/components/view-central/view-central.component.html
+++ b/src/app/modules/employee/components/view-central/view-central.component.html
@@ -5,9 +5,28 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menú</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item (click)="showManageClient()">Administrar Clientes</a>
-      <a mat-list-item (click)="showManageRepair()">Administrar Reparaciones</a>
-      <a mat-list-item (click)="onSignOut()">Cerrar Sesión</a>
+      <br>
+      <h1 class="title">Empleado</h1>
+      <br>
+      <ng-container *ngIf="user$ | async as user; else elseTemplate">
+        <ng-container *ngIf="user?.photoURL == null; else elseT">
+          <img src="../../../../../assets/img/profile.png" class="imgUser">
+        </ng-container>
+        <ng-template #elseT>
+          <img src='{{ user?.photoURL }}' class="imgUser">
+        </ng-template>
+      </ng-container>
+      <ng-template #elseTemplate>
+        <img src="../../../../../assets/img/profile.png" class="imgUser">
+      </ng-template>
+      <br>
+      <br>
+      <p class="subtitle" *ngIf="user$ | async as user">{{ user?.email }}</p>
+      <br>
+      <br>
+      <a mat-list-item (click)="showManageClient()"><mat-icon class="tip">supervisor_account</mat-icon> Clientes</a>
+      <a mat-list-item (click)="showManageRepair()"><mat-icon class="tip">build</mat-icon> Administrar Reparaciones</a>
+      <a mat-list-item (click)="onSignOut()"><mat-icon class="tip">meeting_room</mat-icon> Cerrar Sesión</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
