--- a/src/app/modules/employee/components/view-central/view-central.component.css
+++ b/src/app/modules/employee/components/view-central/view-central.component.css
@@ -15,3 +15,20 @@
   top: 0;
   z-index: 1;
 }
+.title{
+  font-weight: bold;
+  text-align: center;
+}
+.subtitle{
+  text-align: center;
+}
+.tip{
+  margin-right: 10px;
+}
+.imgUser{
+  width: 100px;
+  display: block;
+  margin: auto;
+  height: 100px;
+  border-radius: 200px;
+}
