--- a/src/app/modules/employee/components/manage-clients/manage-clients.component.html
+++ b/src/app/modules/employee/components/manage-clients/manage-clients.component.html
@@ -97,6 +97,26 @@
   <br />
   <br />
   <div class="row justify-content-center">
+    <div class="col-12 col-lg-6 col-xl-6 col-md-6 col-sm-12">
+      <mat-card>
+        <h1 class="title">Búsquedas</h1>
+          <mat-form-field appearance="outline" class="imp">
+            <mat-label>Búsqueda por Nombre</mat-label>
+            <input
+              type="text"
+              matInput
+              placeholder="Ej: Juan Gómez"
+              autocomplete="off"
+              [(ngModel)]="filterPost"
+            />
+            <mat-icon matSuffix>search</mat-icon>
+          </mat-form-field>
+      </mat-card>
+    </div>
+  </div>
+  <br>
+  <br>
+  <div class="row justify-content-center">
     <div class="col-12 col-lg-12 col-xl-12 col-md-12 col-sm-12">
       <ng-container *ngIf="clients.length != 0; else elseTemplate">
         <div class="table-responsive">
@@ -113,7 +133,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let i of clients">
+              <tr *ngFor="let i of clients | filterName:filterPost">
                 <td>{{ i.name }}</td>
                 <td>{{ i.dui }}</td>
                 <td>{{ i.marca }}</td>
