--- a/src/app/modules/core/components/page-not-found/page-not-found.component.html
+++ b/src/app/modules/core/components/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
     <mat-toolbar-row>
       <span class="title"
-        ><mat-icon class="iconlog">build</mat-icon>Taller Mecánico - Error 404</span
+        ><mat-icon class="iconlog">build</mat-icon>Taller Mecánico</span
       >
     </mat-toolbar-row>
   </mat-toolbar>
